# poetry-plugin-github-release

./: LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: black.yml  isort.yml  pycln.yml  pylint.yml
poetry_github_release_plugin/: plugin.py
poetry_plugin_github_release/: plugin.py
